--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 	<head>
 	
+		<link href="resources/css/style.css" type="text/css" rel="stylesheet">
+		<title></title>
 	</head>
 	
 	<body>
-		<h1> Hello World</h1>
-		<p> I'm hosted by GitHub pages</p>
+		<div>
+		<div class="header">
+			<h1>Broadway Design</h1>
+			<h3><a href="#home">Home</a></h3>
+			<h3><a href="#process">Process</a></h3>
+			<h3><a href="#team">Team</a></h3>
+			<h3><a href="#contact">Contact</a></h3>
+		</div>
+		
+		<div>
+			<h2 id="process">Our Process</h2>
+				<img src="resources/icons/identify.svg">
+					<h2>Identify</h2>
+					<p>We focus on the most important details.</p>
+				<img src="resources/icons/understand.svg">
+					<h2>Understand</h2>
+					<p>We study our project inside and out</p>
+				<img src="resources/icons/execute.svg">
+					<h2>Execute</h2>
+					<p>We put everything we have into our work
+		</div>
+		
+		<div class="designed">
+			<h2>Designed in New York</h2>
+		</div>
+		
+			<div>
+				<h2>Portfolio</h2>
+					<p>Coming Soon</p>
+				<h2 id="team">Team</h2>
+					<p>We're Hiring</p>
+				<h2 id="contact">Contact</h2>
+					<p>Phone: (555)-555-5555<br>E-mail: test@example.com<br>Twitter: @test</p>
+		</div>
+		
+		<div class="footer">
+			<h6>@Broardway 2016<span><a href="#home">Home</a></span> <span><a href="#process">Process</a></span> <span><a href="#team">Team</a></span> <span><a href="#contact">Contact</a></span>
+		</div>
 	</body>
 </html>
